# video-trans

./: .gitignore  video-trans-guide.md
knowledge_platform/: README.md  config.yaml  pyproject.toml
knowledge_platform/kp/: __init__.py  ingest.py  retrieve.py  schemas.py  serve.py  specgen.py
knowledge_platform/kp/extract/: __init__.py  base.py  concepts.py  conflicts.py  rules.py  runner.py  signals.py  strategies.py
knowledge_platform/tests/: __init__.py
video_rag_pipeline/: .gitignore  KNOWLEDGE_PLATFORM_PLAN.md  README.md  config.yaml  extract_knowledge.py  next-steps.md  pyproject.toml  run_pipeline.py
video_rag_pipeline/output/6_Graphical_Representation_intro/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/ADVANCED_FOOTPRINT_CHARTING___PART_A/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/ADVANCED_FOOTPRINT_CHARTING___PART_B/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/Absorption_and_Auctioning___EUR___18_12_17/: frames.json  meta.json  scenes.json
video_rag_pipeline/output/Absorption_and_Auctioning___Gold___06_12_17/: frames.json  meta.json  scenes.json
video_rag_pipeline/output/Advanced_Order_Flow_Analysis_1/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/Advanced_Order_Flow_Analysis_2/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/Advanced_Order_Flow_Analysis_3/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/Advanced_Order_Flow_Analysis_4/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/Advanced_Order_Flow_Analysis_5/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/Advanced_Order_Flow_Analysis_6/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/Auction_Imbalances___ES_500___07_12_17/: frames.json  meta.json
video_rag_pipeline/output/Auction_Imbalances___Gold___06_12_17/: frames.json  meta.json  scenes.json
video_rag_pipeline/output/Bitcoin_Footprint_Strategy_Debrief__Axia_Futures_Premium_Membership_Stream_/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/Breakout_Footprint_Strategy_Debrief__Axia_Futures_Premium_Membership_Stream_/: chunks.jsonl  frames.json  meta.json  scenes.json  transcript.json
video_rag_pipeline/output/DRILL_SESSION/: chunks.jsonl  (+4 more)
video_rag_pipeline/tests/: __init__.py  test_chunk.py  test_crop.py  test_io.py  test_schema.py
video_rag_pipeline/vrag/: __init__.py  caption.py  chunk.py  crop.py  ffmpeg_utils.py  frames.py  io.py  knowledge_schema.py  ocr.py  scene_detect.py  schema.py  transcribe.py
(+2357 files in other folders)
